@@ -20,6 +20,8 @@
    * Buffed weapon ionizer to only -50% damage from -70% damage
    * Made weapon sets more robust to changes
    * Fixed some pirate checks in dominated systems
+   * Clear weapon sets when doing active cooldown
+   * Run ship / outfit code Lua code when disabled or cooling down
    * `srs_ferry`: fixed marker not updating for alternative delivery locations
    * `nelly03`: guard against the player changing systems in the middle of mining
    * `zbh06`: made mission easier for the player
